Add DPS code share and import

--- a/src/app/features/character/component/artifact/artifact.component.css
+++ b/src/app/features/character/component/artifact/artifact.component.css
@@ -76,6 +76,11 @@ table tr:first-child .content-right {
 
 .add-button {
     width: 30px;
+    height: 30px;
+}
+
+:host ::ng-deep .mat-icon-button {
+    line-height: 30px !important;
 }
 
 :host ::ng-deep .set-field mat-form-field {
