--- a/src/app/shared/component/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/shared/component/confirm-dialog/confirm-dialog.component.html
@@ -5,6 +5,6 @@
   </div>
   <div mat-dialog-actions class="container-action">
     <button mat-button mat-dialog-close cdkFocusInitial>{{ data.cancel| translate:data.cancelVal }}</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{ data.ok | translate:data.okVal }}</button>
+    <button mat-button [mat-dialog-close]="true">{{ data.ok | translate:data.okVal }}</button>
   </div>
 </div>
