--- a/src/app/features/character/component/artifact-auto/artifact-auto.component.html
+++ b/src/app/features/character/component/artifact-auto/artifact-auto.component.html
@@ -59,8 +59,8 @@
                             <mat-option *ngIf="item.hasEmpty" value=""></mat-option>
                             <ng-container *ngFor="let option of userInputList[item.selectListName!]">
                                 <ng-container [ngSwitch]="item.useNameMap">
-                                    <mat-option *ngSwitchCase="'custom'" [value]="option" [innerText]="item.optionTranslationTag + item.optionNameMap![option] | translate"></mat-option>
-                                    <mat-option *ngSwitchCase="'none'" [value]="option" [innerText]="option"></mat-option>
+                                    <mat-option *ngSwitchCase="'custom'" [value]="option" [innerText]="item.optionTranslationTag + item.optionNameMap![$any(option)] | translate"></mat-option>
+                                    <mat-option *ngSwitchCase="'none'" [value]="item.isSelectObjectList?$any(option).value:option" [innerText]="item.isSelectObjectList?$any(option).name:option"></mat-option>
                                     <mat-option *ngSwitchDefault [value]="option" [innerText]="item.optionTranslationTag + option.toString() | translate"></mat-option>
                                 </ng-container>
                             </ng-container>
