Refine component animation

--- a/src/app/features/character/component/dps/dps.component.css
+++ b/src/app/features/character/component/dps/dps.component.css
@@ -186,6 +186,7 @@ input[type=number] {
     font-size: 1em;
     /* padding-right: 0.4em; */
     font-weight: 700;
+    white-space: nowrap;
 }
 
 .one-line {
