--- a/src/app/shared/component/enka/enka.component.html
+++ b/src/app/shared/component/enka/enka.component.html
@@ -3,6 +3,8 @@
         <input matInput [formControl]="uid" placeholder="UID" maxlength="9" minlength="9" (keypress)="($event.charCode >= 48 && $event.charCode < 58)">
     </mat-form-field>
     <button mat-icon-button class="icon-button" (click)="onClick()">
-        <figure class="shinshinmoe"></figure>
+        <div class="shinshinmoe-container">
+            <figure [@enkaLoad]="enkaButtonState" (@enkaLoad.done)="onAnimationDone()" class="shinshinmoe"></figure>
+        </div>
     </button>
 </div>
