--- a/src/app/shared/component/enka/enka.component.css
+++ b/src/app/shared/component/enka/enka.component.css
@@ -16,19 +16,20 @@
     margin-right: 4px;
 }
 
+.icon-button {
+    width: 40px;
+    height: 40px;
+}
+
 .shinshinmoe-container {
-    line-height: 0;
-    width: 2em;
-    margin: 1.05em 1rem 0 .4em;
-    height: 0;
-    align-self: center;
     position: absolute;
-    top: 0.2em;
+    top: -.18em;
+    width: 100%;
+    height: 100%;
 }
 
 .shinshinmoe {
     margin: 0;
-    height: 0.425em;
 }
 
 .shinshinmoe:before {
