--- a/src/app/features/homePage/component/main/main.component.html
+++ b/src/app/features/homePage/component/main/main.component.html
@@ -12,6 +12,10 @@
                     <mat-icon class="align-icon material-icons-outlined">explore</mat-icon>
                     <span>{{ 'MENU.MANUAL.TITLE' | translate }}</span>
                 </button>
+                <button mat-menu-item class="align-v" (click)="openAnalytics()" >
+                    <mat-icon class="align-icon material-icons-outlined">analytics</mat-icon>
+                    <span>{{ 'MENU.ANALYTICS.TITLE' | translate }}</span>
+                </button>
                 <button mat-menu-item class="align-v" (click)="removeCurrentCache()" >
                     <mat-icon class="align-icon">layers_clear</mat-icon>
                     <span>{{ 'MENU.DELETE_CACHE.ALL_TITLE' | translate }}</span>
