--- a/src/app/features/character/component/constellation/constellation.component.html
+++ b/src/app/features/character/component/constellation/constellation.component.html
@@ -20,7 +20,7 @@
                             [characterIndex]="data.id"
                             [skill]="name_constellation"
                             [skillIndex]="i"
-                            [valueIndexs]="talent.paramValidIndexs">
+                            [valueIndexes]="talent.paramValidIndexes">
                             <br>
                             <br>
                         </app-extra-data>
