--- a/src/app/features/character/component/extra-info/extra-info.component.html
+++ b/src/app/features/character/component/extra-info/extra-info.component.html
@@ -34,7 +34,7 @@
                     <app-extra-data
                         [characterIndex]="data.id"
                         [skill]="skill"
-                        [valueIndexs]="skillDescDatas[i].valuePropIndexs"
+                        [valueIndexes]="skillDescDatas[i].valuePropIndexes"
                         [overrideElement]="overrideElement">
                     </app-extra-data>
                 </td>
