--- a/src/app/features/character/component/talent/talent.component.html
+++ b/src/app/features/character/component/talent/talent.component.html
@@ -76,7 +76,7 @@
                                     [characterIndex]="data.id"
                                     [skill]="skills"
                                     [skillIndex]="i"
-                                    [valueIndexs]="skill.paramValidIndexs">
+                                    [valueIndexes]="skill.paramValidIndexes">
                                     <br>
                                     <br>
                                 </app-extra-data>
