--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -103,7 +103,7 @@
                             [characterIndex]="data.id"
                             [skill]="name_effect"
                             [refreshBuffOnChangeFlg]="true"
-                            [valueIndexs]="effectValidIndexs">
+                            [valueIndexes]="effectValidIndexes">
                             <br>
                             <br>
                         </app-extra-data>
