--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -25,14 +25,14 @@
         </div>
     </div>
     <div class="content" [@otherLoad]="otherState">
-        <app-character class="use-visible-low" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_character]]" [name]="name_character" (draged)="onChildStartDrag($event)"></app-character>
-        <app-weapon class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_weapon]]" [name]="name_weapon" (draged)="onChildStartDrag($event)"></app-weapon>
-        <app-talent class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_talent]]" [name]="name_talent" (draged)="onChildStartDrag($event)"></app-talent>
-        <app-constellation class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_constellation]]" [name]="name_constellation" (draged)="onChildStartDrag($event)"></app-constellation>
-        <app-enemy [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_enemy]]" [name]="name_enemy" (draged)="onChildStartDrag($event)"></app-enemy>
-        <app-artifact class="use-visible-low" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_artifact]]" [name]="name_artifact" (draged)="onChildStartDrag($event)"></app-artifact>
-        <app-team [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_other]]" [name]="name_other" (draged)="onChildStartDrag($event)"></app-team>
-        <app-other [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_team]]" [name]="name_team" (draged)="onChildStartDrag($event)"></app-other>
-        <app-dps [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexs[childNameMap[name_dps]]" [name]="name_dps" (draged)="onChildStartDrag($event)"></app-dps>
+        <app-character class="use-visible-low" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_character]]" [name]="name_character" (draged)="onChildStartDrag($event)"></app-character>
+        <app-weapon class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_weapon]]" [name]="name_weapon" (draged)="onChildStartDrag($event)"></app-weapon>
+        <app-talent class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_talent]]" [name]="name_talent" (draged)="onChildStartDrag($event)"></app-talent>
+        <app-constellation class="use-visible" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_constellation]]" [name]="name_constellation" (draged)="onChildStartDrag($event)"></app-constellation>
+        <app-enemy [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_enemy]]" [name]="name_enemy" (draged)="onChildStartDrag($event)"></app-enemy>
+        <app-artifact class="use-visible-low" [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_artifact]]" [name]="name_artifact" (draged)="onChildStartDrag($event)"></app-artifact>
+        <app-team [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_other]]" [name]="name_other" (draged)="onChildStartDrag($event)"></app-team>
+        <app-other [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_team]]" [name]="name_team" (draged)="onChildStartDrag($event)"></app-other>
+        <app-dps [data]="data" [language]="currentLanguage" [cardWidth]="setCardWidth" [zIndex]="childZIndexes[childNameMap[name_dps]]" [name]="name_dps" (draged)="onChildStartDrag($event)"></app-dps>
     </div>
 </div>
